packages/typ/tests/fixtures/diagnostics/0760_fcm_hidden_value_to_int_consumer_10.ml.expected
File "0760_fcm_hidden_value_to_int_consumer_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0760_fcm_hidden_value_to_int_consumer_10 is not a valid module name.

File "0760_fcm_hidden_value_to_int_consumer_10.ml", line 10, characters 20-27:
10 |   consume_int_kappa M.value
                         ^^^^^^^
Error: The value M.value has type M.t but an expression was expected of type
         int
